<resources>
    <string name="app_name">soch</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="mobile_app">Mobile App</string>
    <string name="enter_details">Enter Details</string>
    <string name="name">نام</string>
    <string name="age">عمر</string>
    <string name="medicationtime">ادویات کا وقت</string>
    <string name="todo">TODO</string>
    <string name="quiz">امتحان</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_qiuz">Start Quiz</string>
    <string name="new_quiz">Start New Quiz</string>

    <string name="ans1">Button</string>
    <string name="ans2">Button</string>
    <string name="ans3">TextView</string>
    <string name="ans4">Button</string>
    <string name="ans5">Button</string>
    <string name="imageee">TODO</string>
    <string name="home">تفصیلات</string>
    <string name="quizless">جائزہ</string>
    <string name="god_s_eye">پہچان</string>
    <string name="ansone">ans1</string>
    <string name="anstwo">ans2</string>
    <string name="ansthree">ans3</string>
    <string name="ansfour">ans4</string>
    <string name="ansonee">Button</string>
    <string name="anstwoo">Button</string>
    <string name="ansthreeee">Button</string>
    <string name="ansfourr">Button</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="quizz">جائزہ</string>
    <string name="_0">0</string>
    <string name="score">سکور(score)</string>
    <string name="aik">۱</string>
    <string name="teen">۳</string>
    <string name="chaar">۴</string>
    <string name="dkdkdk">TODO</string>
    <string name="dododo">doosrahai</string>
    <string name="kssd">۲</string>
    <string name="shurur">جائزہ شروع کریں؟</string>
    <string name="cancel">جائزہ منسوخ کریں</string>
    <string name="resume">جاری رکھیں</string>

    <string name="dssdsd">TODO</string>
    <string name="skskslala">TODO</string>
    <string name="details">مریض کی تفصیلات</string>
    <string name="logooo">TODO</string>
    <string name="oldcover">TODO</string>
    <string name="kdkdkd">TODO</string>
    <string name="signupp">سائن اپ</string>
    <string name="darjkarein">درج کریں</string>
    <string name="_10">/10</string>
    <string name="zero">0</string>
    <string name="capture">Button</string>
    <string name="cameraa">TODO</string>
    <string name="cameraaa">TODO</string>
    <string name="click">کلک کریں</string>
    <string name="godseye">پہچان </string>
    <string name="editttt">TODO</string>
    <string name="editagain">TODO</string>
    <string name="editagainn">TODO</string>
    <string name="testingbutton">Button</string>
    <string name="inst">تفصیلات</string>
    <string name="stuffff">- آپکے سامنے کچھ تصویر ہیں گیں اپنے انکو دے گئی چار آپشنز میں سے ایک پر کلک کردینا ہے - کل تعداد سوالات کی ١٠ ہو گی - سوالات کے اختتام پر اپکا سکور آپکو بتایا جی گا - سہی جواب پر ہر رنگ کا دبا بنجائیگا - گلت جواب پر لال دابّ بنجائیگا - گلت جواب پر ایک نمبر کٹ جائیگا - سہی جواب پر ایک نمبر بڑھ جی گا - کل نمبر بھی ١٠ ہوں گے</string>
    <string name="in">تفصیلات</string>
    <string name="nope">Nope</string>
    <string name="okay">Okay</string>
    <string name="average">اوسط</string>
    <string name="Total">کل سوال نامے</string>
    <string name="speak">سنو</string>
    <string name = "urududud">شروع کریں></string>
    <string name="skjnd">یہاں آپ کی تفصیلات دستیاب ہیں: - یہ صفحہ آپ کا نام، عمر، دوا کا وقت دکھاتا ہے۔ - آپ کئی بار دوائیاں شامل کرسکتے ہیں۔ - وقت کے لئے ایک گھڑی ظاہر ہوگی۔ - اس کے بعد آپ اپنی تفصیلات محفوظ کر سکتے ہیں۔ - یہ تفصیلات ہمارے ڈیٹا بیس میں محفوظ ہو جائیں گی۔</string>
    <string name="fkkff">یہاں ہدایات ہیں: - کیمرہ کھولیں۔ - اسے اعتراض کے سامنے رکھیں - آپ کو اس کے ارد گرد ایک باؤنڈنگ باکس نظر آئے گا۔ - ایک متن ظاہر ہوگا جو آپ کو آبجیکٹ کا نام بتاتا ہے۔ - ایک آواز اعتراض کا نام کہہ رہی ہوگی۔</string>
    <string name="djdhdf">ہدایات</string>
    <string name="fdff">Proceed</string>
    <string name="dsdsd">Cancelling</string>
    <string name="sdsds">Button</string>
    <string name="asasasa">امتحان شروع کریں؟</string>
    <string name="sdsdsd">امتحان شروع کریں؟</string>
    <string name="asasasmasm">امتحان منسوخ کریں۔</string>

</resources>