<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:textAlignment="center"
    android:layout_height="match_parent"
    tools:context=".ObjectRecognizer">



    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="104dp"
        android:layout_height="113dp"
        android:contentDescription="@string/dkdkdk"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="158dp"
        android:layout_height="74dp"

        android:layout_marginBottom="12dp"
        android:text="@string/godseye"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/round"
        android:text="@string/click"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
<TextView
    android:id="@+id/label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="24sp"
    android:layout_marginTop="12dp"
    app:layout_constraintTop_toBottomOf="@id/imageView12"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    android:textColor="@color/black"


    />
    <Button
        android:id="@+id/speak"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="65dp"
        android:text="@string/speak"
        android:background="@drawable/round"
        />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="340dp"
        android:layout_height="283dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/cameraaa"
        android:src="@drawable/camera3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>