<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/colouring"
    tools:context=".QuizSimulation">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score"
        android:id="@+id/ScoreBox"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="2dp"
        app:layout_constraintStart_toEndOf="@id/ScoreBox"
        android:id="@+id/score"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:text="0"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="453dp"
        android:layout_height="192dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/imageee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ImageContrastCheck"
        tools:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="104dp"
        android:text="@string/quizless"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/option1"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/round"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/option2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/round"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/option3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/round"
        android:text="@string/_1"
        android:textColor="#F3F0EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/option4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/round"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>