<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectanglebg"
    tools:context=".Report">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameIcon"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        android:textSize="25dp"
        android:textColor="@color/black"

        />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginRight="10dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/nameIcon"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AgeIcon"
        android:text="@string/age"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@id/Age"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"

        />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:hint="@string/age"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:id="@+id/Total_quiz"
        app:layout_constraintTop_toBottomOf="@id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Total"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:layout_marginRight="30dp"

        />

    <TextView
        android:id="@+id/Quizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/Total_quiz"
        app:layout_constraintTop_toBottomOf="@id/Name"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/avgIcon"
        android:text="@string/average"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Age"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="42dp"
        android:textColor="@color/black"

        />

    <TextView
        android:id="@+id/avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@id/avgIcon"
        app:layout_constraintTop_toBottomOf="@id/Age"

        />


    <Button
        android:id="@+id/userpage"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round"
        android:text="تفصیلات"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="-10dp"
        android:text="رپورٹ"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>